--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
     font-weight: bold;
     padding: 12px 16px;
     text-shadow: 0px 1px 0px #ffffff;
+
 }
 
 #addBoardButton:hover {
@@ -21,4 +22,27 @@
 #addBoardButton:active {
     position: relative;
     top: 1px;
+}
+
+.titleSection {
+    border-bottom: 1px solid black;
+    height: 100px;
+    background-color: cyan;
+}
+
+.singleBoard {
+    border: 1px solid black;
+    height: 400px;
+    max-width: 200px;
+}
+
+.boardTitle {
+    margin: 30%;
+
+}
+
+.taskSection {
+    padding: 10%;
+    background-color: lightblue;
+    display:
 }
