--- a/style.css
+++ b/style.css
@@ -1,22 +1,20 @@
 #addBoardButton {
-    box-shadow: 0px 1px 0px 0px #1c1b18;
-    background: linear-gradient(to bottom, #eae0c2 5%, #ccc2a6 100%);
-    background-color: #eae0c2;
-    border-radius: 15px;
-    border: 2px solid #333029;
+    background-color: rgba(44, 54, 64);
+    border: none;
+    border-radius: 10px;
+    color: rgb(230, 230, 230);
+    padding: 15px 15px;
+    text-align: center;
     display: inline-block;
-    color: #505739;
-    font-family: Arial;
-    font-size: 14px;
-    font-weight: bold;
-    padding: 12px 16px;
-    text-shadow: 0px 1px 0px #ffffff;
+    font-size: 20px;
+    cursor: pointer;
+    font-family: 'Montserrat', sans-serif;
+    width: 250px;
 
 }
 
 #addBoardButton:hover {
-    background: linear-gradient(to bottom, #ccc2a6 5%, #eae0c2 100%);
-    background-color: #ccc2a6;
+    background-color: rgb(74, 83, 92);
 }
 
 #addBoardButton:active {
@@ -24,25 +22,100 @@
     top: 1px;
 }
 
+#removeBoardButton {
+    background-color: rgba(44, 54, 64);
+    border: none;
+    border-radius: 10px;
+    color: rgb(230, 230, 230);
+    padding: 15px 15px;
+    text-align: center;
+    font-size: 20px;
+    cursor: pointer;
+    font-family: 'Montserrat', sans-serif;
+    width: 250px;
+}
+
+#removeBoardButton:hover {
+    background-color: rgb(74, 83, 92);
+}
+
+#removeBoardButton:active {
+    position: relative;
+    top: 1px;
+}
+
 .titleSection {
+    border-radius: 10px;
     border-bottom: 1px solid black;
-    height: 100px;
-    background-color: cyan;
+    height: 50px;
+    padding: 5%;
+    font-size: 10px;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    background-color: white;
 }
 
 .singleBoard {
-    border: 1px solid black;
+    margin-top: 5%;
+    margin-bottom: 2%;
+    float: left;
+    margin-left: 5%;
+    border-radius: 10px;
+    border: 2px solid black;
     height: 400px;
-    max-width: 200px;
+    width: 200px;
+    overflow: auto;
 }
 
 .boardTitle {
-    margin: 30%;
+    margin: 0;
 
 }
 
 .taskSection {
     padding: 10%;
     background-color: lightblue;
-    display:
+
+}
+
+#pageAddButton {
+    background-color: rgba(44, 54, 64);
+    border: none;
+    border-radius: 10px;
+    color: rgba(230, 230, 230);
+    padding: 15px 15px;
+    text-align: center;
+    display: inline-block;
+    font-size: 10px;
+    margin: 20px 50px 10px 50px;
+    cursor: pointer;
+    font-family: 'Montserrat', sans-serif;
+    width: 100px;
+}
+
+.onlyAddButton {
+    margin-top: 2.5%;
+    margin-left: 38%;
+}
+
+.bothButtons {
+    margin-top: 2.5%;
+    margin-left: 5%;
+    margin-bottom: 3%;
+}
+
+.bothButtons:first-of-type {
+    margin-left: 27%;
+}
+
+.removeButtonVisible {
+    display: inline-block;
+}
+
+.removeButtonHidden {
+    display: none;
+}
+
+::-webkit-scrollbar {
+    display: none;
 }
