--- a/src/style.css
+++ b/src/style.css
@@ -52,7 +52,7 @@
     font-size: 10px;
     text-align: center;
     font-family: 'Montserrat', sans-serif;
-    background-color: white;
+    background-color: gold;
 }
 
 .singleBoard {
@@ -65,7 +65,7 @@
     height: 400px;
     width: 200px;
     overflow: auto;
-    background-color: rgb(174, 175, 173);
+    background-color: #bbb;
 
 }
 
@@ -78,11 +78,13 @@
     margin: 10%;
     padding: 2% 5%;
     background-color: rgb(88, 194, 230);
+    border: 1px solid black;
 
 }
 
 .taskDescription {
     overflow-wrap: break-word;
+    font-weight: bold;
     font-family: 'Montserrat', sans-serif;
 }
 
